--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <nav class="nav">
     <h1 class="logo"><a href="#"></a>Nicholas Marrone</h1>
     <ul class="nav-links">
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
@@ -30,14 +30,14 @@
   <!--Flexbox Body-->
   <div class="content-wrapper">
     <div class="about-wrapper">
-      <h2>About Me</h2>
+      <h2 id="about-me">About Me</h2>
       <p class="about-me">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, nobis sint nam
-        molestias, ea explicabo deleniti numquam ipsa perspiciatis inventore pariatur hic voluptate tempore.
+        molestias, ea explicabo deleniti numquam ipsa perspiciatis inventore pariatur hic voluptate tempore. <br>
         Molestias nulla rem corrupti consequuntur alias?</p>
     </div>
-    <div class="work-wrapper">
-      <h2>Work</h2>
-      <div class="work-pic">
+    <div class="portfolio-wrapper">
+      <h2 id="portfolio">Work</h2>
+      <div class="portfolio-pic">
         <img src="coderefactor.PNG" alt="Code Refactor">
         <img src="scratch.jfif" alt="Scratch Project">
         <img src="codeimage.jfif" alt="Code Image">
@@ -46,19 +46,19 @@
       </div>
     </div>
     <div class="contact-wrapper">
-      <h2>Contact</h2>
+      <h2 id="contact">Contact</h2>
       <div class="links-me">
-        <a href="https://github.com/NicholasMarrone-1997">Github</a>
-        <a href="https://www.linkedin.com/in/nmarrone1/">Linkedin</a>
-        <a href="mailto: nmarrone1997@gmail.com">Send Email</a>
-        <a href="tel:732-275-7312">732-275-7312</a>
+        <a href="https://github.com/NicholasMarrone-1997"><button>Github</button></a>
+        <a href="https://www.linkedin.com/in/nmarrone1/"><button>Linkedin</button></a>
+        <a href="mailto: nmarrone1997@gmail.com"><button>Email</button></a>
+        <a href="tel:732-275-7312"><button>Phone</button></a>
       </div>
     </div>
   </div>
 
 
   <footer>
-    Made with love
+    <p>&#127937 thanks for your consideration &#127937</p>
   </footer>
 
 </body>
