Replaced with better quality image, re-worked contact buttons, tried to get pictures to layout correctly...

--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
   <div class="content-wrapper">
     <div class="about-wrapper">
       <h2 id="about-me">About Me</h2>
-      <p class="about-me">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, nobis sint nam
-        molestias, ea explicabo deleniti numquam ipsa perspiciatis inventore pariatur hic voluptate tempore. <br>
-        Molestias nulla rem corrupti consequuntur alias?</p>
+      <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web developer.</p>
     </div>
+
     <div class="portfolio-wrapper">
       <h2 id="portfolio">Work</h2>
-      <div class="portfolio-pic">
-        <img src="coderefactor.PNG" alt="Code Refactor">
-        <img src="scratch.jfif" alt="Scratch Project">
-        <img src="codeimage.jfif" alt="Code Image">
-        <img src="coding2.jfif" alt="Coding Image">
-        <img src="codingidea.jfif" alt="Coding Idea">
-      </div>
+      <section class="portfolio-section">
+        <div class="portfolio-pic">
+          <h3>Code Refractor</h3>
+          <a href="https://github.com/NicholasMarrone-1997" target="_blank"> <img title="Code Refractor" src="coderefactor.PNG" alt="Code Refactor"> </a>
+        </div>
+        <div class="portfolio-pic">
+          <h3>Scratch Project</h3>
+          <a href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank"> <img title="Scratch Project" src="scratchmit.png" alt="Scratch Project"> </a>
+        </div>
+      </section>
     </div>
     <div class="contact-wrapper">
       <h2 id="contact">Contact</h2>
