Fixes to contact section, credits in readme, changes in css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Nicholas Marrone Personal Portfolio Webpage.">
   <title>02-Advanced-CSS-Module</title>
 </head>
 
@@ -28,12 +29,13 @@
   </div>
 
   <!--Flexbox Body-->
+  <!--About Me Section-->
   <div class="content-wrapper">
     <div class="about-wrapper">
       <h2 id="about-me">About Me</h2>
       <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web developer.</p>
     </div>
-
+  <!--Portfolio Section-->
     <div class="portfolio-wrapper">
       <h2 id="portfolio">Work</h2>
       <section class="portfolio-section">
@@ -47,6 +49,7 @@
         </div>
       </section>
     </div>
+    <!--Contact Section-->
     <div class="contact-wrapper">
       <h2 id="contact">Contact</h2>
       <div class="links-me">
@@ -58,7 +61,7 @@
     </div>
   </div>
 
-
+<!--Footer-->
   <footer>
     <p>&#127937 thanks for your consideration &#127937</p>
   </footer>
