--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Assets/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <meta name="description" content="Nicholas Marrone Personal Portfolio Webpage.">
   <title>02-Advanced-CSS-Module</title>
 </head>
@@ -33,6 +35,7 @@
   <div class="content-wrapper">
     <div class="about-wrapper">
       <h2 id="about-me">About Me</h2>
+      <img id="headshot" src="Assets/headshot.jfif" alt="Italian Trulli">
       <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web developer.</p>
     </div>
   <!--Portfolio Section-->
@@ -40,12 +43,13 @@
       <h2 id="portfolio">Work</h2>
       <section class="portfolio-section">
         <div class="portfolio-pic">
-          <h3>Code Refractor</h3>
-          <a href="https://github.com/NicholasMarrone-1997" target="_blank"> <img title="Code Refractor" src="coderefactor.PNG" alt="Code Refactor"> </a>
+          <h3>Movie Finder Application</h3>
+          <a href="https://github.com/NicholasMarrone-1997" target="_blank"> <img title="Movie Finder Application" src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
         </div>
         <div class="portfolio-pic">
-          <h3>Scratch Project</h3>
-          <a href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank"> <img title="Scratch Project" src="scratchmit.png" alt="Scratch Project"> </a>
+          <h3>Work Day Scheduler</h3>
+          <a href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank"> <img title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
+          <a href=""
         </div>
       </section>
     </div>
