--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
       <section class="portfolio-section">
         <div class="portfolio-pic">
           <h3>Movie Finder Application</h3>
-          <a href="https://github.com/NicholasMarrone-1997" target="_blank"> <img title="Movie Finder Application" src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
+          <a href="https://github.com/ngkent75/moviefinderapp">Movie Finder Repo</a>
+          <br></br>
+          <a href="https://ngkent75.github.io/moviefinderapp/">Movie Finder Deployed</a>
+          <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application" src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
         </div>
         <div class="portfolio-pic">
           <h3>Work Day Scheduler</h3>
-          <a href="https://scratch.mit.edu/projects/editor/?tutorial=getStarted" target="_blank"> <img title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
-          <a href=""
+          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler">Work Day Scheduler Repo</a>
+          <br></br>
+          <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/">Work Day Scheduler Deployed</a>
+          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
         </div>
       </section>
     </div>
