Flexbox properties come in handy

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Assets/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+  </script>
   <meta name="description" content="Nicholas Marrone Personal Portfolio Webpage.">
   <title>02-Advanced-CSS-Module</title>
 </head>
@@ -36,9 +39,12 @@
     <div class="about-wrapper">
       <h2 id="about-me">About Me</h2>
       <img id="headshot" src="Assets/headshot.jfif" alt="Italian Trulli">
-      <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web developer.</p>
+      <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic
+        Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer
+        Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web
+        developer.</p>
     </div>
-  <!--Portfolio Section-->
+    <!--Portfolio Section-->
     <div class="portfolio-wrapper">
       <h2 id="portfolio">Work</h2>
       <section class="portfolio-section">
@@ -47,14 +53,16 @@
           <a href="https://github.com/ngkent75/moviefinderapp">Movie Finder Repo</a>
           <br></br>
           <a href="https://ngkent75.github.io/moviefinderapp/">Movie Finder Deployed</a>
-          <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application" src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
+          <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application"
+              src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
         </div>
         <div class="portfolio-pic">
           <h3>Work Day Scheduler</h3>
           <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler">Work Day Scheduler Repo</a>
           <br></br>
           <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/">Work Day Scheduler Deployed</a>
-          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
+          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img
+              title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
         </div>
       </section>
     </div>
@@ -70,7 +78,7 @@
     </div>
   </div>
 
-<!--Footer-->
+  <!--Footer-->
   <footer>
     <p>&#127937 thanks for your consideration &#127937</p>
   </footer>
