Added resume, added repo's and deployed url's to each project, updated styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
+      <li><a href="#resume">Resume</a></li>
     </ul>
   </nav>
 
@@ -50,20 +51,21 @@
       <section class="portfolio-section">
         <div class="portfolio-pic">
           <h3>Movie Finder Application</h3>
-          <a href="https://github.com/ngkent75/moviefinderapp">Movie Finder Repo</a>
+          <a href="https://github.com/ngkent75/moviefinderapp" class="style">Movie Finder Repo</a>
           <br></br>
-          <a href="https://ngkent75.github.io/moviefinderapp/">Movie Finder Deployed</a>
+          <a href="https://ngkent75.github.io/moviefinderapp/" class="style">Movie Finder Deployed</a>
           <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application"
               src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
         </div>
         <div class="portfolio-pic">
           <h3>Work Day Scheduler</h3>
-          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler">Work Day Scheduler Repo</a>
+          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" class="style">Work Day Scheduler Repo</a>
           <br></br>
-          <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/">Work Day Scheduler Deployed</a>
+          <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/" class="style">Work Day Scheduler Deployed</a>
           <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img
               title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
         </div>
+        
       </section>
     </div>
     <!--Contact Section-->
@@ -74,8 +76,12 @@
         <a href="https://www.linkedin.com/in/nmarrone1/"><button>Linkedin</button></a>
         <a href="mailto: nmarrone1997@gmail.com"><button>Email</button></a>
         <a href="tel:732-275-7312"><button>Phone</button></a>
+        <a href="/Assets/resume.pdf"><button type="button">Resume</button></a>
+
       </div>
     </div>
+    <!--End Contact Section-->
+
   </div>
 
   <!--Footer-->
