--- a/index.html
+++ b/index.html
@@ -11,84 +11,110 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
   </script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
   <meta name="description" content="Nicholas Marrone Personal Portfolio Webpage.">
   <title>02-Advanced-CSS-Module</title>
 </head>
 
 <body>
-  <!--Navigation Bar-->
-  <nav class="nav">
-    <h1 class="logo"><a href="#"></a>Nicholas Marrone</h1>
-    <ul class="nav-links">
-      <li><a href="#about-me">About Me</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#resume">Resume</a></li>
-    </ul>
-  </nav>
+  <div class="container-fluid">
+    <!--Navigation Bar-->
+    <nav class="nav row">
+      <div class="col-12">
+        <h1 class="logo"><a href="#"></a>Nicholas Marrone</h1>
+        <ul class="nav-links">
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#resume">Resume</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <!--Hero Section-->
-  <div class="hero-container">
-    <div class="hero">
-      <h3>Web Developer</h3>
-    </div>
-  </div>
-
-  <!--Flexbox Body-->
-  <!--About Me Section-->
-  <div class="content-wrapper">
-    <div class="about-wrapper">
-      <h2 id="about-me">About Me</h2>
-      <img id="headshot" src="Assets/headshot.jfif" alt="Italian Trulli">
-      <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic
-        Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer
-        Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a web
-        developer.</p>
-    </div>
-    <!--Portfolio Section-->
-    <div class="portfolio-wrapper">
-      <h2 id="portfolio">Work</h2>
-      <section class="portfolio-section">
-        <div class="portfolio-pic">
-          <h3>Movie Finder Application</h3>
-          <a href="https://github.com/ngkent75/moviefinderapp" class="style">Movie Finder Repo</a>
-          <br></br>
-          <a href="https://ngkent75.github.io/moviefinderapp/" class="style">Movie Finder Deployed</a>
-          <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application"
-              src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
-        </div>
-        <div class="portfolio-pic">
-          <h3>Work Day Scheduler</h3>
-          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" class="style">Work Day Scheduler Repo</a>
-          <br></br>
-          <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/" class="style">Work Day Scheduler Deployed</a>
-          <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img
-              title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
-        </div>
-        
-      </section>
-    </div>
-    <!--Contact Section-->
-    <div class="contact-wrapper">
-      <h2 id="contact">Contact</h2>
-      <div class="links-me">
-        <a href="https://github.com/NicholasMarrone-1997"><button>Github</button></a>
-        <a href="https://www.linkedin.com/in/nmarrone1/"><button>Linkedin</button></a>
-        <a href="mailto: nmarrone1997@gmail.com"><button>Email</button></a>
-        <a href="tel:732-275-7312"><button>Phone</button></a>
-        <a href="/Assets/resume.pdf"><button type="button">Resume</button></a>
-
+    <!--Hero Section-->
+    <div class="hero-container">
+      <div class="hero">
+        <h3>Web Developer</h3>
       </div>
     </div>
-    <!--End Contact Section-->
+
+    <!--Flexbox Body-->
+    <!--About Me Section-->
+    <div class="content-wrapper">
+      <div class="about-wrapper row">
+        <div class="col-md-6">
+          <h2 id="about-me">About Me</h2>
+          <img id="headshot" src="Assets/headshot.jfif" alt="Italian Trulli">
+        </div>
+
+        <div class="col-md-6">
+          <p class="about-me">Hello, my name is Nicholas Marrone. I am 24 years old and am originally from Atlantic
+            Highlands, NJ. I graduated from the University of North Carolina at Charlotte in 2019 with a BS in Computer
+            Science. I am currently attending a full-stack web development bootcamp where I hope to hone my skills as a
+            web
+            developer.</p>
+        </div>
+      </div>
+      <!--Portfolio Section-->
+      <div class="portfolio-wrapper">
+        <h2 id="portfolio">Work</h2>
+        <section class="portfolio-section row justify-content-center">
+
+          <div class="portfolio-pic col-md-4">
+            <h3>Movie Finder Application</h3>
+            <a href="https://github.com/ngkent75/moviefinderapp" target="_blank"> <img title="Movie Finder Application"
+                src="Assets/moviefinderapp.PNG" alt="Movie Finder"> </a>
+            <a href="https://github.com/ngkent75/moviefinderapp">Movie Finder Repo</a>
+            <br></br>
+            <a href="https://ngkent75.github.io/moviefinderapp/">Movie Finder Deployed</a>
+          </div>
+          <div class="portfolio-pic col-md-4">
+            <h3>PokeBaller Application</h3>
+            <a href="https://github.com/ngkent75/PokeBaller" target="_blank"> <img title="PokeBaller Application"
+                src="Assets/pokeballer.PNG" alt="PokeBaller"> </a>
+            <a href="https://github.com/ngkent75/PokeBaller">PokeBaller Repo</a>
+            <br></br>
+            <a href="https://evening-oasis-15758.herokuapp.com/login">PokeBaller Deployed</a>
+          </div>
+          <div class="portfolio-pic col-md-4">
+            <h3>Work Day Scheduler</h3>
+            <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler" target="_blank"> <img
+                title="Work Day Scheduler" src="Assets/workdayapp.PNG" alt="Work Day"> </a>
+            <a href="https://github.com/NicholasMarrone-1997/Work-Day-Scheduler">Work Day Scheduler Repo</a>
+            <br></br>
+            <a href="https://nicholasmarrone-1997.github.io/Work-Day-Scheduler/">Work Day Scheduler Deployed</a>
+          </div>
+
+        </section>
+      </div>
+      <!--Contact Section-->
+      <div class="contact-wrapper">
+        <h2 id="contact">Contact</h2>
+        <div class="links-me">
+          <a href="https://github.com/NicholasMarrone-1997"><button>Github</button></a>
+          <a href="https://www.linkedin.com/in/nmarrone1/"><button>Linkedin</button></a>
+          <a href="mailto: nmarrone1997@gmail.com"><button>Email</button></a>
+          <a href="tel:732-275-7312"><button>Phone</button></a>
+          <a href="/Assets/resume.pdf"><button type="button">Resume</button></a>
+
+        </div>
+      </div>
+      <!--End Contact Section-->
+
+    </div>
+
+    <!--Footer-->
+    <footer>
+      <p>&#127937 thanks for your consideration &#127937</p>
+    </footer>
 
   </div>
 
-  <!--Footer-->
-  <footer>
-    <p>&#127937 thanks for your consideration &#127937</p>
-  </footer>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
